Update to Spring Boot 2.7.0-M1 with spring-boot-starter-graphql bundled