@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.1</version>
+        <version>2.7.0-M1</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -20,7 +20,6 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <graphql-java.version>17.3</graphql-java.version>
-        <spring-graphql.version>1.0.0-M4</spring-graphql.version>
     </properties>
 
     <dependencies>
@@ -45,9 +44,8 @@
             <version>17.0</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.experimental</groupId>
-            <artifactId>graphql-spring-boot-starter</artifactId>
-            <version>${spring-graphql.version}</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-graphql</artifactId>
         </dependency>
         <!-- rsocket-->
         <dependency>
@@ -79,9 +77,6 @@
                 <version>3.8.1</version>
                 <configuration>
                     <parameters>true</parameters>
-                    <compilerArgs>
-                        <compilerArg>--enable-preview</compilerArg>
-                    </compilerArgs>
                 </configuration>
             </plugin>
         </plugins>
